Fix breadcrumb nav visibility (#5944)

--- a/docs/_sass/custom/custom.scss
+++ b/docs/_sass/custom/custom.scss
@@ -1053,3 +1053,5 @@ img.quickstart {
 		text-decoration-color: inherit;
 	}
 }
+
+.breadcrumb-nav { margin-top: 1rem; } 
